# keypad

./: .gdbinit  compile_commands.json  md407_crossfile.txt  meson.build
src/: gpio.h  keypad.c  keypad.h  main.c  meson.build
src/md407/: meson.build  startup.c
src/md407/include/: gpio-macros.h
